# user-management-srv-python

./: .dockerignore  .env.example  .flake8  .gitattributes  .gitignore  Dockerfile  Dockerfile1  README.md  docker-compose-prod.yml  docker-compose.yml  prod.Dockerfile  prod.run.sh  pyproject.toml  queue-prod.dockerfile  queue.dockerfile  requirements.txt  run.sh  worker-start.sh
alembic/: env.py
alembic/versions/: 0d3ded4c0b71_initial_migration.py  554b9f4c9d76_create_user_management_tables.py  9164b7b217a0_order_added.py  953cbb4cfdb7_logged_in_user_table_added.py  b5280ec06cd7_describe_changes.py  d41d248fc695_added_newmodel_table.py
app/: __init__.py  app_logger.py  app_logger_formatter.py  check_expiry.py  main.py  scheduleCron.py  utils.py
app/api/: deps.py
app/core/: config.py  consumer.py  producer.py  security.py
app/crud/: __init__.py  base.py  crud_logged_in_users.py  crud_permission.py  crud_permission_group.py  crud_role.py  crud_role_group.py  crud_user.py
app/db/: base.py  dbo.permission.csv  dbo.permission_group.csv  init_db.py  session.py
app/models/: __init__.py  logged_in_users.py  permission.py  permission_group.py  role.py  role_group.py  role_group_map.py  role_permission.py  user.py  user_password_history.py  user_role.py
app/schemas/: __init__.py  logged_in_users.py  msg.py  permission.py  permission_group.py  role.py  role_group.py  role_group_map.py  role_permission.py  token.py  user.py  user_password_history.py  user_role.py
scripts/: build-dev.sh  build-prod.sh  deploy-dev.sh  deploy-prod.sh  format.sh
(+8 files in other folders)
